// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot: bad code 1`] = `
<Wrapper
  code="
      (<div>hello</div>)
    "
  inline={false}
>
  <div>
    <YozoraCodeRendererJsx
      code="
      (<div>hello</div>)
    "
      inline={false}
      onError={[Function]}
      scope={Object {}}
    />
    <pre>
      SyntaxError: No-Inline evaluations must call \`render\`.
    </pre>
  </div>
</Wrapper>
`;

exports[`basic rendering case snapshot: block code 1`] = `
<Wrapper
  code="
      const Container = styled.div\`
        background: hsl(0deg, 10%, 90%);
      \`

      render(
        <Container>
          <span style={{ color: 'orange' }}>Hello, world</span>
        </Container>
      )
    "
  inline={false}
>
  <div>
    <YozoraCodeRendererJsx
      code="
      const Container = styled.div\`
        background: hsl(0deg, 10%, 90%);
      \`

      render(
        <Container>
          <span style={{ color: 'orange' }}>Hello, world</span>
        </Container>
      )
    "
      inline={false}
      onError={[Function]}
      scope={Object {}}
    />
    <pre>
      ReferenceError: styled is not defined
    </pre>
  </div>
</Wrapper>
`;

exports[`basic rendering case snapshot: inline code 1`] = `
<Wrapper
  code="
      (
        <div>
          <span>Hello, world</span>
        </div>
      )
    "
  inline={true}
>
  <div>
    <YozoraCodeRendererJsx
      code="
      (
        <div>
          <span>Hello, world</span>
        </div>
      )
    "
      inline={true}
      onError={[Function]}
      scope={Object {}}
    >
      <ErrorBoundary>
        <div>
          <span>
            Hello, world
          </span>
        </div>
      </ErrorBoundary>
    </YozoraCodeRendererJsx>
    <pre />
  </div>
</Wrapper>
`;
